[metadata]
name = firemap
version = 0.0.1
author = Ruben Remelgado
author_email = ruben.remelgado@gmail.com
description = Mapping of fire regimes using Google Earth Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RRemelgado/firemap
project_urls =
    Bug Tracker = https://github.com/RRemelgado/firemap/issues
	Zenod Repository = 
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
